refactor: refactor whole code base

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -174,11 +174,139 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Llama_index approach"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from llama_index.experimental.query_engine import PandasQueryEngine\n",
+    "from llama_index.llms.groq import Groq\n",
+    "\n",
+    "\n",
+    "llm = Groq(model=\"llama3-70b-8192\")\n",
+    "\n",
+    "data_df = pd.read_csv(\"../data/train.csv\")\n",
+    "query_engine = PandasQueryEngine(df=data_df, verbose=True, llm=llm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> Pandas Instructions:\n",
+      "```\n",
+      "df.corr().style.background_gradient(cmap='coolwarm', axis=None)\n",
+      "```\n",
+      "> Pandas Output: There was an error running the output as Python code. Error message: could not convert string to float: 'Hooghly Chinsurah'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/bachngo/anaconda3/envs/data_analyst/lib/python3.12/site-packages/llama_index/experimental/query_engine/pandas/output_parser.py\", line 54, in default_output_processor\n",
+      "    output_str = str(safe_eval(module_end_str, global_vars, local_vars))\n",
+      "                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/bachngo/anaconda3/envs/data_analyst/lib/python3.12/site-packages/llama_index/experimental/exec_utils.py\", line 159, in safe_eval\n",
+      "    return eval(__source, _get_restricted_globals(__globals), __locals)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"<string>\", line 1, in <module>\n",
+      "  File \"/home/bachngo/anaconda3/envs/data_analyst/lib/python3.12/site-packages/pandas/core/frame.py\", line 11049, in corr\n",
+      "    mat = data.to_numpy(dtype=float, na_value=np.nan, copy=False)\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/bachngo/anaconda3/envs/data_analyst/lib/python3.12/site-packages/pandas/core/frame.py\", line 1993, in to_numpy\n",
+      "    result = self._mgr.as_array(dtype=dtype, copy=copy, na_value=na_value)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/bachngo/anaconda3/envs/data_analyst/lib/python3.12/site-packages/pandas/core/internals/managers.py\", line 1694, in as_array\n",
+      "    arr = self._interleave(dtype=dtype, na_value=na_value)\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/bachngo/anaconda3/envs/data_analyst/lib/python3.12/site-packages/pandas/core/internals/managers.py\", line 1753, in _interleave\n",
+      "    result[rl.indexer] = arr\n",
+      "    ~~~~~~^^^^^^^^^^^^\n",
+      "ValueError: could not convert string to float: 'Hooghly Chinsurah'\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = query_engine.query(\"Draw the data correlation matrix\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There was an error running the output as Python code. Error message: could not convert string to float: 'Hooghly Chinsurah'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response.response)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from llama_index.core.tools import QueryEngineTool, ToolMetadata\n",
+    "\n",
+    "tools = [\n",
+    "    QueryEngineTool(\n",
+    "        query_engine=query_engine,\n",
+    "        metadata=ToolMetadata(\n",
+    "            name=\"pandas_engine\",\n",
+    "            description=(\n",
+    "                \"Provides analysis on the data frame based on the query. \"\n",
+    "                \"Use a detailed plain text question as input to the tool.\"\n",
+    "            ),\n",
+    "        ),)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setup pack arguments\n",
+    "\n",
+    "from llama_index.core.agent import AgentRunner\n",
+    "from llama_index.agent.llm_compiler.step import LLMCompilerAgentWorker\n",
+    "\n",
+    "agent_worker = LLMCompilerAgentWorker.from_tools(\n",
+    "    tools, llm=llm, verbose=True, callback_manager=callback_manager\n",
+    ")\n",
+    "agent = AgentRunner(agent_worker, callback_manager=callback_manager)\n",
+    "\n",
+    "# start using the agent\n",
+    "response = agent.chat(\"What is (121 * 3) + 42?\")"
+   ]
   }
  ],
  "metadata": {
@@ -197,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
