feat (analysis tool suite): update tool suite

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -204,50 +204,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> Pandas Instructions:\n",
-      "```\n",
-      "df.corr().style.background_gradient(cmap='coolwarm', axis=None)\n",
-      "```\n",
-      "> Pandas Output: There was an error running the output as Python code. Error message: could not convert string to float: 'Hooghly Chinsurah'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/home/bachngo/anaconda3/envs/data_analyst/lib/python3.12/site-packages/llama_index/experimental/query_engine/pandas/output_parser.py\", line 54, in default_output_processor\n",
-      "    output_str = str(safe_eval(module_end_str, global_vars, local_vars))\n",
-      "                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/bachngo/anaconda3/envs/data_analyst/lib/python3.12/site-packages/llama_index/experimental/exec_utils.py\", line 159, in safe_eval\n",
-      "    return eval(__source, _get_restricted_globals(__globals), __locals)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"<string>\", line 1, in <module>\n",
-      "  File \"/home/bachngo/anaconda3/envs/data_analyst/lib/python3.12/site-packages/pandas/core/frame.py\", line 11049, in corr\n",
-      "    mat = data.to_numpy(dtype=float, na_value=np.nan, copy=False)\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/bachngo/anaconda3/envs/data_analyst/lib/python3.12/site-packages/pandas/core/frame.py\", line 1993, in to_numpy\n",
-      "    result = self._mgr.as_array(dtype=dtype, copy=copy, na_value=na_value)\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/bachngo/anaconda3/envs/data_analyst/lib/python3.12/site-packages/pandas/core/internals/managers.py\", line 1694, in as_array\n",
-      "    arr = self._interleave(dtype=dtype, na_value=na_value)\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/bachngo/anaconda3/envs/data_analyst/lib/python3.12/site-packages/pandas/core/internals/managers.py\", line 1753, in _interleave\n",
-      "    result[rl.indexer] = arr\n",
-      "    ~~~~~~^^^^^^^^^^^^\n",
-      "ValueError: could not convert string to float: 'Hooghly Chinsurah'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "response = query_engine.query(\"Draw the data correlation matrix\")"
+    "# response = query_engine.query(\"Draw the data correlation matrix\")"
    ]
   },
   {
@@ -269,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,8 +242,7 @@
     "        metadata=ToolMetadata(\n",
     "            name=\"pandas_engine\",\n",
     "            description=(\n",
-    "                \"Provides analysis on the data frame based on the query. \"\n",
-    "                \"Use a detailed plain text question as input to the tool.\"\n",
+    "                \"Provides pandas code and execution on the data frame based on the query. \"\n",
     "            ),\n",
     "        ),)\n",
     "]"
@@ -290,23 +250,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# setup pack arguments\n",
+    "# # setup pack arguments\n",
+    "# from llama_index.core.agent import AgentRunner\n",
+    "# from llama_index.agent.llm_compiler.step import LLMCompilerAgentWorker\n",
     "\n",
-    "from llama_index.core.agent import AgentRunner\n",
-    "from llama_index.agent.llm_compiler.step import LLMCompilerAgentWorker\n",
+    "# agent_worker = LLMCompilerAgentWorker.from_tools(\n",
+    "#     tools, llm=llm, verbose=True\n",
+    "# )\n",
+    "# agent = AgentRunner(agent_worker)\n",
     "\n",
-    "agent_worker = LLMCompilerAgentWorker.from_tools(\n",
-    "    tools, llm=llm, verbose=True, callback_manager=callback_manager\n",
-    ")\n",
-    "agent = AgentRunner(agent_worker, callback_manager=callback_manager)\n",
-    "\n",
-    "# start using the agent\n",
-    "response = agent.chat(\"What is (121 * 3) + 42?\")"
+    "# # start using the agent\n",
+    "# response = agent.chat(\"Perform analytics on the data frame\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Any, Dict, Optional, List\n",
+    "import re\n",
+    "def parse_code_markdown(text: str, only_last: bool) -> List[str]:\n",
+    "    # Regular expression pattern to match code within triple-backticks with an optional programming language\n",
+    "    pattern = r\"```[a-zA-Z]*\\n(.*?)```\"\n",
+    "\n",
+    "    # Find all matches of the pattern in the text\n",
+    "    matches = re.findall(pattern, text, re.DOTALL)\n",
+    "\n",
+    "    # Return the last matched group if requested\n",
+    "    code = matches[-1] if matches and only_last else matches\n",
+    "\n",
+    "    # If empty, we optimistically assume the output is the code\n",
+    "    if not code:\n",
+    "        # Strip the text to handle cases where the code may start or end with triple backticks or quotes\n",
+    "        candidate = text.strip()\n",
+    "\n",
+    "        # Handle cases where the code is surrounded by regular quotes\n",
+    "        if candidate.startswith('\"') and candidate.endswith('\"'):\n",
+    "            candidate = candidate[1:-1]\n",
+    "\n",
+    "        if candidate.startswith(\"'\") and candidate.endswith(\"'\"):\n",
+    "            candidate = candidate[1:-1]\n",
+    "\n",
+    "        if candidate.startswith(\"`\") and candidate.endswith(\"`\"):\n",
+    "            candidate = candidate[1:-1]\n",
+    "\n",
+    "        # Handle triple backticks at the start\n",
+    "        if candidate.startswith(\"```\"):\n",
+    "            candidate = re.sub(r\"^```[a-zA-Z]*\\n?\", \"\", candidate)\n",
+    "\n",
+    "        # Handle triple backticks at the end\n",
+    "        if candidate.endswith(\"```\"):\n",
+    "            candidate = candidate[:-3]\n",
+    "\n",
+    "        code = [candidate.strip()]\n",
+    "\n",
+    "    return code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"df['Age'].mean()\\n\""
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example usage\n",
+    "text = '''\n",
+    "Here is some Python code:\n",
+    "\n",
+    "```python\n",
+    "df['Age'].mean()\n",
+    "```\n",
+    "'''\n",
+    "\n",
+    "parse_code_markdown(text, only_last=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
